--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
-    margin: 0;
+    background-image: url(./images/TC_background.png);
+    margin:0;
     background-color: #222;
     color:#EEEEEE;
 }
